--- a/BackEnd/composer.json
+++ b/BackEnd/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.10.1",
-        "nesbot/carbon": "^3.9"
+        "nesbot/carbon": "^3.9",
+        "smalot/pdfparser": "^2.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
